Fix overflow tweet on p tag

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -8,6 +8,7 @@
   border: 0.2em solid;
   margin-top: 2em;
   padding: 0.5em;
+  width: 100%;
 }
 
 .tweet-individual-container:hover {
@@ -48,16 +49,14 @@
 }
 
 .tweet-msg {
-  width: 100%;
-  border-bottom: 0.2em solid;
-}
-
-.tweet-msg {
   height: 3em;
+  width: 100%;
   padding: 0.5em;
   margin: 0em;
   margin-top: 0.5em;
   align-items: center;
+  border-bottom: 0.2em solid;
+  overflow-wrap: break-word; 
 }
 
 .tweet-footer {
